# terminalpulse

./: LICENSE  README.md  demo.cast  pyproject.toml
terminalpulse/: cli.py  daemon.py  events.py  graph.py  mcp_server.py  windows_tracker.py
tests/: test_terminalpulse.py
