[project]
name = "terminalpulse"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "watchdog>=4.0",
    "networkx>=3.2",
    "pydantic>=2.6",
]

[project.scripts]
pulse = "terminalpulse.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
